--- a/Business/BusinessObjects.csproj
+++ b/Business/BusinessObjects.csproj
@@ -512,7 +512,7 @@
     <Compile Include="Test\BCellEnumeration\BCellEnumerationTest.cs" />
     <Compile Include="Test\BCellEnumeration\BCellEnumerationTestOrder.cs" />
     <Compile Include="Test\BCellEnumeration\BCellEnumerationWordDocument.cs" />
-    <Compile Include="Test\BCL2t1418\BCL2t1418EpicObxView.cs" />
+    <Compile Include="Test\BCL2t1418\BCL2t1418EPICObxView.cs" />
     <Compile Include="Test\BCL2t1418\BCL2t1418Result.cs" />
     <Compile Include="Test\BCL2t1418\BCL2t1418ResultCollection.cs" />
     <Compile Include="Test\BCL2t1418\BCL2t1418Test.cs" />
