--- a/Business/BusinessObjects.csproj
+++ b/Business/BusinessObjects.csproj
@@ -513,12 +513,12 @@
     <Compile Include="Test\BCellEnumeration\BCellEnumerationTest.cs" />
     <Compile Include="Test\BCellEnumeration\BCellEnumerationTestOrder.cs" />
     <Compile Include="Test\BCellEnumeration\BCellEnumerationWordDocument.cs" />
-    <Compile Include="Test\BCL2t1418\BCL2t1418EPICObxView.cs" />
-    <Compile Include="Test\BCL2t1418\BCL2t1418Result.cs" />
-    <Compile Include="Test\BCL2t1418\BCL2t1418ResultCollection.cs" />
-    <Compile Include="Test\BCL2t1418\BCL2t1418Test.cs" />
-    <Compile Include="Test\BCL2t1418\BCL2t1418TestOrder.cs" />
-    <Compile Include="Test\BCL2t1418\BCL2t1418WordDocument.cs" />
+    <Compile Include="Test\BCL2t1418ByPCR\BCL2t1418ByPCREPICObxView.cs" />
+    <Compile Include="Test\BCL2t1418ByPCR\BCL2t1418ByPCRResult.cs" />
+    <Compile Include="Test\BCL2t1418ByPCR\BCL2t1418ByPCRResultCollection.cs" />
+    <Compile Include="Test\BCL2t1418ByPCR\BCL2t1418ByPCRTest.cs" />
+    <Compile Include="Test\BCL2t1418ByPCR\BCL2t1418ByPCRTestOrder.cs" />
+    <Compile Include="Test\BCL2t1418ByPCR\BCL2t1418ByPCRWordDocument.cs" />
     <Compile Include="Test\CD1a\CD1aTest.cs" />
     <Compile Include="Test\ChromosomeAnalysis\ChromosomeAnalysisIncompleteResult.cs" />
     <Compile Include="Test\EGFRMutationAnalysis\EGFRMutationAnalysisPanel.cs" />
