--- a/Business/BusinessObjects.csproj
+++ b/Business/BusinessObjects.csproj
@@ -513,6 +513,12 @@
     <Compile Include="Test\BCellEnumeration\BCellEnumerationTest.cs" />
     <Compile Include="Test\BCellEnumeration\BCellEnumerationTestOrder.cs" />
     <Compile Include="Test\BCellEnumeration\BCellEnumerationWordDocument.cs" />
+    <Compile Include="Test\BCL2t1418ByFISH\BCL2t1418ByFISHEPICObxView.cs" />
+    <Compile Include="Test\BCL2t1418ByFISH\BCL2t1418ByFISHResult.cs" />
+    <Compile Include="Test\BCL2t1418ByFISH\BCL2t1418ByFISHResultCollection.cs" />
+    <Compile Include="Test\BCL2t1418ByFISH\BCL2t1418ByFISHTest.cs" />
+    <Compile Include="Test\BCL2t1418ByFISH\BCL2t1418ByFISHTestOrder.cs" />
+    <Compile Include="Test\BCL2t1418ByFISH\BCL2t1418ByFISHWordDocument.cs" />
     <Compile Include="Test\BCL2t1418ByPCR\BCL2t1418ByPCREPICObxView.cs" />
     <Compile Include="Test\BCL2t1418ByPCR\BCL2t1418ByPCRResult.cs" />
     <Compile Include="Test\BCL2t1418ByPCR\BCL2t1418ByPCRResultCollection.cs" />
