--- a/UI/UserInterface.csproj
+++ b/UI/UserInterface.csproj
@@ -608,6 +608,10 @@
       <DependentUpon>BCL1t1114ResultPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Test\BCL1t1114ResultPath.cs" />
+    <Compile Include="Test\BCL2t1418ByFISHResultPage.xaml.cs">
+      <DependentUpon>BCL2t1418ByFISHResultPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Test\BCL2t1418ByFISHResultPath.cs" />
     <Compile Include="Test\BCL2t1418ByPCRResultPage.xaml.cs">
       <DependentUpon>BCL2t1418ByPCRResultPage.xaml</DependentUpon>
     </Compile>
@@ -2246,6 +2250,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Test\BCL1t1114ResultPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Test\BCL2t1418ByFISHResultPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
