Rename API1MALT2 to ByFish, add ByPCR

--- a/Business/BusinessObjects.csproj
+++ b/Business/BusinessObjects.csproj
@@ -508,7 +508,15 @@
     <Compile Include="Test\ALKForNSCLCByFISH\ALKForNSCLCByFISHNegativeWithPolysomyResult.cs" />
     <Compile Include="Test\ALKForNSCLCByFISH\ALKForNSCLCByFISHQNSResult.cs" />
     <Compile Include="Test\ALKForNSCLCByFISH\ALKForNSCLCByFISHNotInterpretableResult.cs" />
-    <Compile Include="Test\API2MALT1\API2MALT1CMMCNteView.cs" />
+    <Compile Include="Test\API2MALT1ByFISH\API2MALT1ByFISHCMMCNteView.cs" />
+    <Compile Include="Test\API2MALT1ByPCR\API2MALT1ByPCRCMMCNTEView.cs" />
+    <Compile Include="Test\API2MALT1ByPCR\API2MALT1ByPCREPICOBXView.cs" />
+    <Compile Include="Test\API2MALT1ByPCR\API2MALT1ByPCRNegativeResult.cs" />
+    <Compile Include="Test\API2MALT1ByPCR\API2MALT1ByPCRPositiveResult.cs" />
+    <Compile Include="Test\API2MALT1ByPCR\API2MALT1ByPCRResultCollection.cs" />
+    <Compile Include="Test\API2MALT1ByPCR\API2MALT1ByPCRTest.cs" />
+    <Compile Include="Test\API2MALT1ByPCR\API2MALT1ByPCRTestOrder.cs" />
+    <Compile Include="Test\API2MALT1ByPCR\API2MALT1ByPCRWordDocument.cs" />
     <Compile Include="Test\BCellEnumeration\BCellEnumerationEPICObxView.cs" />
     <Compile Include="Test\BCellEnumeration\BCellEnumerationTest.cs" />
     <Compile Include="Test\BCellEnumeration\BCellEnumerationTestOrder.cs" />
@@ -1524,13 +1532,13 @@
     <Compile Include="Test\AMLStandardByFish\AMLStandardByFishTest.cs" />
     <Compile Include="Test\AMLStandardByFish\AMLStandardByFishTestOrder.cs" />
     <Compile Include="Test\AMLStandardByFish\AMLStandardByFishWordDocument.cs" />
-    <Compile Include="Test\API2MALT1\API2MALT1EPICObxView.cs" />
-    <Compile Include="Test\API2MALT1\API2MALT1NegativeResult.cs" />
-    <Compile Include="Test\API2MALT1\API2MALT1PositiveResult.cs" />
-    <Compile Include="Test\API2MALT1\API2MALT1ResultCollection.cs" />
-    <Compile Include="Test\API2MALT1\API2MALT1Test.cs" />
-    <Compile Include="Test\API2MALT1\API2MALT1TestOrder.cs" />
-    <Compile Include="Test\API2MALT1\API2MALT1WordDocument.cs" />
+    <Compile Include="Test\API2MALT1ByFISH\API2MALT1ByFISHEPICObxView.cs" />
+    <Compile Include="Test\API2MALT1ByFISH\API2MALT1ByFISHNegativeResult.cs" />
+    <Compile Include="Test\API2MALT1ByFISH\API2MALT1ByFISHPositiveResult.cs" />
+    <Compile Include="Test\API2MALT1ByFISH\API2MALT1ByFISHResultCollection.cs" />
+    <Compile Include="Test\API2MALT1ByFISH\API2MALT1ByFISHTest.cs" />
+    <Compile Include="Test\API2MALT1ByFISH\API2MALT1ByFISHTestOrder.cs" />
+    <Compile Include="Test\API2MALT1ByFISH\API2MALT1ByFISHWordDocument.cs" />
     <Compile Include="Test\Autopsy\AutopsyTest.cs" />
     <Compile Include="Test\BCellClonalityByPCR\BCellClonalityByPCRTest.cs" />
     <Compile Include="Test\BCellGeneRearrangement\BCellGeneRearrangementTest.cs" />
