Create TestOrderRemover, remove AORemoverPage

--- a/UI/UserInterface.csproj
+++ b/UI/UserInterface.csproj
@@ -189,9 +189,6 @@
     </Compile>
     <Compile Include="AOBuilder.cs" />
     <Compile Include="AORemover.cs" />
-    <Compile Include="AORemoverPage.xaml.cs">
-      <DependentUpon>AORemoverPage.xaml</DependentUpon>
-    </Compile>
     <Compile Include="AppMessaging\LockRequestSentPage.xaml.cs">
       <DependentUpon>LockRequestSentPage.xaml</DependentUpon>
     </Compile>
@@ -570,6 +567,7 @@
     <Compile Include="TaskWorkspace.xaml.cs">
       <DependentUpon>TaskWorkspace.xaml</DependentUpon>
     </Compile>
+    <Compile Include="TestOrderRemover.cs" />
     <Compile Include="Test\ABL1KinaseDomainMutationResultPage.xaml.cs">
       <DependentUpon>ABL1KinaseDomainMutationResultPage.xaml</DependentUpon>
     </Compile>
@@ -1861,10 +1859,6 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="AmendmentPageController.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="AORemoverPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
