--- a/ObjectGatewayTests/ObjectGatewayTests.csproj
+++ b/ObjectGatewayTests/ObjectGatewayTests.csproj
@@ -63,6 +63,10 @@
       <Project>{0712f3d4-5c03-4446-b8fe-b8f5be9495b1}</Project>
       <Name>BusinessObjects</Name>
     </ProjectReference>
+    <ProjectReference Include="..\UI\UserInterface.csproj">
+      <Project>{b592c3c3-c7d0-4b34-a932-06605568e45f}</Project>
+      <Name>UserInterface</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="edge\double_edge.js">
